# discord-issues

./: .editorconfig  .gitignore  DESIGN.md  LICENSE  README.md  alembic.ini  pyproject.toml
alembic/: env.py
alembic/versions/: 071d50848c8d_status_backpopulate.py  072bc2824b80_create_initial_tables.py  2b132d87f5d1_changed_timezones.py  3142d47234a8_initial_migration.py  68f46830f9ce_changed_guild_issue_id_to_project_issue_.py  9202a2ab6076_initial_migration.py  92c4981384e9_add_project_model_and_restructure_.py  9bfec6161965_changed_typings.py
discord-issues/: main.py
discord-issues/db/: database.py  models.py
discord_issues/: __main__.py  bot.py  main.py
discord_issues/cogs/: admin_command.py  issue_command.py  project_command.py  status_command.py  tag_command.py
discord_issues/db/: database.py  models.py
discord_issues/repo/: base_repository.py  guild_repository.py  issue_repository.py  project_repository.py  status_repository.py  tag_repository.py  user_repository.py
tests/: conftest.py  project_test.py  tag_test.py
